--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "spellslinger.js",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./bin/www.js",
     "fuzzy": "node ./fuzzydeck.js"
   },
   "dependencies": {
