--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mustache-express": "^1.3.2",
     "redis": "^4.6.4",
     "requirejs": "^2.3.6",
-    "scryfall-api": "^3.2.4"
+    "scryfall-api": "^3.2.4",
+    "sequelize": "^6.29.0",
+    "sqlite3": "^5.1.4"
   }
 }
