--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -1,9 +1,9 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "SpellSlinger",
   "description": "A Chrome extension to enhance Spell Table",
   "version": "0.1",
-  "browser_action": {
+  "action": {
     "default_icon": "icons/logo128.png",
     "default_popup": "popup.html",
     "default_title": "SpellSlinger"
@@ -12,20 +12,25 @@
     "48": "icons/logo48.png",
     "128": "icons/logo128.png"
   },
-  "content_security_policy": "script-src 'self'; object-src 'self'",
+  "content_security_policy": {
+    "script-src": "self",
+    "object-src": "self"
+  },
   "content_scripts": [{
     "js": ["content.js"],
     "matches": ["https://spelltable.wizards.com/*"]
   }],
   "background": {
-    "page": "scryfall.html"
+    "service_worker": "scryfall.js"
   },
   "permissions": [
     "webRequest",
     "storage",
+    "debugger"
+  ],
+  "host_permissions": [
     "*://spelltable.api.bi.wizards.com/*",
     "https://spelltable.wizards.com/*",
-    "http://127.0.0.1:9292/*",
-    "debugger"
+    "http://127.0.0.1:9292/*"
   ]
 }
