--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "server": "node ./bin/www.cjs",
     "cli": "node ./cli/app.js",
-    "redis:start": ""
+    "job-identify": "node ./jobs/identify.js",
+    "job-cast": "node ./jobs/cast.js"
   },
   "dependencies": {
+    "bee-queue": "^1.5.0",
     "colors": "^1.4.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
